--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,51 @@
 main {
   max-width: 1100px;
 }
+
+/* Workout Card Styles */
+
+.workout-card {
+  height: 150px;
+  overflow: hidden;
+  margin-bottom: 1.8rem;
+  box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
+}
+.workout-card:hover .workout-description {
+  top: 0;
+}
+.workout-card:hover .workout-description .description {
+  transform: translateY(-50px);
+}
+.workout-card:hover {
+  cursor: pointer;
+}
+.workout-title {
+  font-size: 1.2rem;
+}
+.created-by {
+  font-size: .8rem;
+  color: #999;
+}
+.description {
+  font-size: .9rem;
+}
+.workout-description {
+  position: absolute;
+  top: 200px;
+  left: 0;
+  background-color: #157efb;
+  width: 100%;
+  height: 100%;
+  margin-right: 0;
+  z-index: 1000;
+  display: block;
+  color: white;
+  text-align: left;
+  padding-top: 4em;
+  margin-left: 0;
+  transition: all .3s ease;
+}
+.workout-description .description {
+  transform: translateY(200px);
+  transition: all .3s .1s ease;
+}
